# PO-labs-

./: .gitignore  README.md
lab1/lab1/: lab1.sln
lab1/lab1/consistent_variant/: consistent_variant.vcxproj  main.cpp
lab1/lab1/paralel_variant/: main.cpp  paralel_variant.vcxproj
lab2/MyProject/: CMakeLists.txt  MyProject.h  task3.cpp  task4.cpp  task5.cpp
lab3/lab3/: CMakeLists.txt
lab3/lab3/lab3/: CMakeLists.txt  lab3.cpp  lab3.h
lab4/lab4/: CMakeLists.txt
lab4/lab4/Client1/: CMakeLists.txt  client1  client1.cpp
lab4/lab4/Client2/: client2.py
lab4/lab4/Protocol/: CMakeLists.txt  protocol.h
lab4/lab4/Server/: CMakeLists.txt  server  server.cpp
lab5/: .gitignore  CMakeLists.txt  locustfile.py
lab5/lab5/: CMakeLists.txt  lab5.cpp
lab5/static/: index.html  page2.html
